edit Comment Status
